--- a/contactus.html
+++ b/contactus.html
@@ -22,12 +22,12 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+             <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="hcoders/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about.html">About</a>
+                    <a class="nav-link" href="/hcoders/about.html">About</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -44,7 +44,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/contactus.html">Contact Us</a>
+                    <a class="nav-link" href="/hcoders/contactus.html">Contact Us</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
