--- a/contactus.html
+++ b/contactus.html
@@ -23,7 +23,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/hcoders/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -44,7 +44,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/hcoders/contactus.html">Contact Us</a>
+                    <a class="nav-link active" href="/hcoders/contactus.html">Contact Us</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
