--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp" placeholder="Enter email">
+                                aria-describedby="emailHelp" placeholder="Enter email" name="hcoders login email">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                                 else.</small>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Password</label>
                             <input type="password" class="form-control" id="exampleInputPassword1"
-                                placeholder="Password">
+                                placeholder="Password" name="hcoders login password">
                         </div>
                         <div class="form-group form-check">
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -112,23 +112,23 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form action="https://formsubmit.co/0ec56dbbaf817f84698380e9b983fa89" method="POST">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp" placeholder="Enter email">
+                            <input type="email" class="form-control" id="exampleInputEmail"
+                                aria-describedby="emailHelp" placeholder="Enter email" name="hcoders signup email">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                                 else.</small>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Password</label>
                             <input type="password" class="form-control" id="exampleInputPassword1"
-                                placeholder="Password">
+                                placeholder="Password" name="hcoders signup password">
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Confirm password</label>
                             <input type="password" class="form-control" id="exampleInputPassword1"
-                                placeholder="Password">
+                                placeholder="Password" name="hcoders fix signup password">
                         </div>
 
                         <button type="submit" class="btn btn-primary">Create account</button>
