--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form action="https://formsubmit.co/0ec56dbbaf817f84698380e9b983fa89" method="POST">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
