--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 
 
-    <!-- Modal -->
+    <!--Login Modal -->
     <div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="LoginModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -72,7 +72,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form action="https://formsubmit.co/0ec56dbbaf817f84698380e9b983fa89" method="POST">
+                    <form action="https://formsubmit.co/harshkulkarni91580@gmail.com" method="POST">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
@@ -112,7 +112,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form action="https://formsubmit.co/0ec56dbbaf817f84698380e9b983fa89" method="POST">
+                    <form action="https://formsubmit.co/harshkulkarni91580@gmail.com" method="POST">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail"
