--- a/contactus.html
+++ b/contactus.html
@@ -57,14 +57,14 @@
 
         <h2>Contact US </h2>
 
-        <form>
+        <form action="https://formsubmit.co/harshkulkarni91580@gmail.com" method="POST">
             <div class="form-group">
                 <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" name="hcoders contactus email">
             </div>
             <div class="form-group">
                 <label for="exampleFormControlSelect1">Select your Query</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="exampleFormControlSelect1" name="what he selected">
                     <option>web</option>
                     <option>why you exits</option>
                     <option>why i exits</option>
@@ -76,7 +76,7 @@
 
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">Elaborate your concern</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="what he has written"></textarea>
             </div>
             <button class="btn btn-primary">Submit
             </button>
