--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <div class="modal-body">
                     <form action="https://formsubmit.co/harshkulkarni91580@gmail.com" method="POST">
                         <input type="text" name="_honey" style="display: none;">
+                        <input type="hidden" name="_captcha" value="false">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
@@ -115,6 +116,7 @@
                 <div class="modal-body">
                     <form action="https://formsubmit.co/harshkulkarni91580@gmail.com" method="POST">
                         <input type="text" name="_honey" style="display: none;">
+                        <input type="hidden" name="_captcha" value="false">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail"
