--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     <form action="https://formsubmit.co/harshkulkarni91580@gmail.com" method="POST">
                         <input type="text" name="_honey" style="display: none;">
                         <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_next" value="https://harshkulkar.github.io/hcoders/success.html">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
@@ -117,6 +118,7 @@
                     <form action="https://formsubmit.co/harshkulkarni91580@gmail.com" method="POST">
                         <input type="text" name="_honey" style="display: none;">
                         <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_next" value="https://harshkulkar.github.io/hcoders/success.html">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail"
