--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <div class="mb-1 text-muted">Nov 12</div>
                         <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
                             lead-in to additional content.</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
+                        <a href="https://www.canva.com/features/ai-photo-editing/" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250" src="thumb1.jpeg" alt="">
@@ -230,7 +230,7 @@
                         <div class="mb-1 text-muted">Nov 11</div>
                         <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
                             additional content.</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
+                        <a href="https://designs.ai/en" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250" src="thumb2.jpeg" alt="">
@@ -251,7 +251,7 @@
                         <div class="mb-1 text-muted">Nov 12</div>
                         <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
                             lead-in to additional content.</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
+                        <a href="https://bard.google.com/" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250" src="thumb3.jpeg" alt="">
@@ -267,7 +267,7 @@
                         <div class="mb-1 text-muted">Nov 11</div>
                         <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
                             additional content.</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
+                        <a href="https://chat.openai.com/auth/login" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="bd-placeholder-img" width="200" height="250" src="thumb4.jpeg" alt="">
