--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </div>
                         <div class="form-group form-check">
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                            <label class="form-check-label" for="exampleCheck1">I am a Human</label>
                         </div>
                         <button type="submit" class="btn btn-primary">Login</button>
                     </form>
