--- a/index.html
+++ b/index.html
@@ -212,8 +212,7 @@
                         <strong class="d-inline-block mb-2 text-primary">Editing ai</strong>
                         <h3 class="mb-0">Mastering an AI Tools</h3>
                         <div class="mb-1 text-muted">Nov 12</div>
-                        <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
-                            lead-in to additional content.</p>
+                        <p class="card-text mb-auto">This is a photo powerfull photo editing AI.</p>
                         <a href="https://www.canva.com/features/ai-photo-editing/" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
@@ -228,8 +227,7 @@
                         <strong class="d-inline-block mb-2 text-danger">Design</strong>
                         <h3 class="mb-0">Learn AI Designing</h3>
                         <div class="mb-1 text-muted">Nov 11</div>
-                        <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
-                            additional content.</p>
+                        <p class="mb-auto">This is a poerfulldesigning AI tool Created for design.</p>
                         <a href="https://designs.ai/en" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
@@ -249,8 +247,7 @@
                         <strong class="d-inline-block mb-2 text-warning">Bard Ai</strong>
                         <h3 class="mb-0">Coding of AI Tools</h3>
                         <div class="mb-1 text-muted">Nov 12</div>
-                        <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
-                            lead-in to additional content.</p>
+                        <p class="card-text mb-auto">This is a Googles special AI. Its a good rival for chatgpt</p>
                         <a href="https://bard.google.com/" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
@@ -265,8 +262,7 @@
                         <strong class="d-inline-block mb-2 text-success">Chatgpt</strong>
                         <h3 class="mb-0">Learn AI Chatgpt</h3>
                         <div class="mb-1 text-muted">Nov 11</div>
-                        <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
-                            additional content.</p>
+                        <p class="mb-auto">This is a Frist publicly available ai tool.</p>
                         <a href="https://chat.openai.com/auth/login" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
