--- a/about.html
+++ b/about.html
@@ -22,12 +22,12 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-             <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/hcoders/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/hcoders/about.html">About</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/about.html">About</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -44,7 +44,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/hcoders/contactus.html">Contact Us</a>
+                    <a class="nav-link" href="/contactus.html">Contact Us</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -56,11 +56,8 @@
     <div class="container my-4">
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-5">
-                <h2 class="featurette-heading">It all started with Hcoders.<span class="text-muted"> It’ll blow your
-                        mind.</span></h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                    tellus ac cursus commodo.</p>
+                <h2 class="featurette-heading">It all started with Hcoders.<span class="text-muted"> About me.</span></h2>
+                <p class="lead"> Hi , My name is Harsh kulkarni, I created this website for demo and education purpose.</palt="...">
             </div>
             <div class="col-md-7 order-md-1">
                 <img class="img-fluid" src="about1.jpeg" alt="">
@@ -71,11 +68,8 @@
     <div class="container my-4">
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-5 order-md-1">
-                <h2 class="featurette-heading">We started our wedsite in 2023.<span class="text-muted">It’ll blow your
-                        mind.</span></h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                    tellus ac cursus commodo.</p>
+                <h2 class="featurette-heading">We started our wedsite in 2023.<span class="text-muted"> Support my work .</span></h2>
+                <p class="lead">We are buliding a website using different types of framworks and we will grow in future So please Support us.</p>
             </div>
             <div class="col-md-7">
                 <img class="img-fluid" src="about3.jpeg" alt="">
@@ -86,11 +80,8 @@
     <div class="container my-4">
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-7">
-                <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your
-                        mind.</span></h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                    tellus ac cursus commodo.</p>
+                <h2 class="featurette-heading">Website in working condition <span class="text-muted">Read below</span></h2>
+                <p class="lead">This is a basic bloging site from bootstraps.com but its fully funtional and are part of its work its connected to a backend </p>
             </div>
             <div class="col-md-5 order-md-2">
                 <img class="img-fluid" src="about2.jpeg" alt="">
