--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/about.html">About</a>
+                    <a class="nav-link" href="/hcoders/about.html">About</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -44,7 +44,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contactus.html">Contact Us</a>
+                    <a class="nav-link" href="/hcoders/contactus.html">Contact Us</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
